pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: helloworld
spec:
  containers:
  - name: k8s-demo
    image: hiteshsmart420/test-python-learn-ms-training-python-image
    ports:
    - name: nodejs-port
      containerPort: 3000
