helloworld-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellowworld-deployment2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld2
  template:
    metadata:
      labels:
        app: helloworld2
    spec:
      containers:
      - name: k8s-demo
        image: arjunachari12/k8s-demo:2
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service2
spec:
  ports:
  - port: 31001
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: helloworld2
  type: NodePort
