ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
  - host: helloworld1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld1
          servicePort: 80
  - host: helloworld2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld2
          servicePort: 80
